<resources>
    <string name="app_name">BioSnapApp</string>
    <string name="heart_rate">Heart Rate</string>
    <string name="oximetry">Oxygen Concentration</string>
    <string name="temperature">Body Temperature</string>
    <string name="activity">Current Activity</string>
    <string name="action_bluetooth">Bluetooth</string>
    <string name="action_settings">Settings</string>
    <string name="action_info">Information</string>
    <string name="scan_for_ble">Scan For BLE</string>
    <string name="connect_to_ble">Connect to BLE</string>
    <string name="enable_notifications">Enable Notif</string>
    <string name="discover_services">Discover Services</string>
    <string name="graph_options">Live Data Options</string>
    <string name="disconnect_ble">Disconnect</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="retrieve_patient_data">Get Patient Data</string>
    <string name="patient_assessment">Patient Assessment</string>
    <string name="patient_data">Patient Data</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
</resources>
