<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <item
        android:id="@+id/action_bluetooth"
        android:title="@string/action_bluetooth"
        android:orderInCategory="100"
        android:icon="@drawable/ic_bluetooth_black_24dp"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_assessment"
        android:title="@string/patient_assessment"
        android:icon="@drawable/ic_assessment_black_24dp"
        app:showAsAction="ifRoom"
        android:orderInCategory="200"
        />

    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:icon="@drawable/ic_settings_black_24dp"
        app:showAsAction="ifRoom"
        android:orderInCategory="300"
        />

</menu>