<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.eec136b.biosnap.biosnapapp.MainActivity">

    <!-- Adding the Android AppBar Layout -->
    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:layout_below="@id/toolbar">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
            <Button
                android:id="@+id/scan_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/scan_for_ble"
                android:enabled="false"
                android:onClick="bleScan" />
            <Button
                android:id="@+id/connect_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/connect_to_ble"
                android:enabled="false"
                android:onClick="tempSenseConnect" />
            <Button
                android:id="@+id/discover_services_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/discover_services"
                android:enabled="false"
                android:onClick="discoverServices" />
            <Button
                android:id="@+id/notifications_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/enable_notifications"
                android:enabled="false"
                android:onClick="enableNotif" />

            <View style="@style/Divider" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/cardList"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                />

            <View style="@style/Divider" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/graph_options"
                android:textColor="@color/colorAccent"/>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <CheckBox
                    android:id="@+id/checkbox_temp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onCheckboxClicked"
                    android:text="@string/temperature"
                    />
                <CheckBox
                    android:layout_toEndOf="@id/checkbox_temp"
                    android:id="@+id/checkbox_heart_rate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onCheckboxClicked"
                    android:text="@string/heart_rate"
                    />

            </RelativeLayout>

            <View style="@style/Divider" />

            <com.jjoe64.graphview.GraphView
                android:layout_width="wrap_content"
                android:layout_height="200dp"
                android:id="@+id/my_graph" />
        </LinearLayout>


    </ScrollView>



</RelativeLayout>
