<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:paddingTop="100dp"
        android:src="@mipmap/ic_launcher"
        android:contentDescription="@string/app_name"/>



    <EditText
        android:id="@+id/first_name_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/first_name"
        android:layout_centerInParent="true"
        android:inputType="text"/>
    <EditText
        android:id="@+id/last_name_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/last_name"
        android:layout_below="@id/first_name_et"
        android:inputType="text"/>

    <Button
        android:id="@+id/new_user_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/last_name_et"
        android:layout_centerHorizontal="true"
        android:backgroundTint="@color/colorPrimaryDark"
        android:text="Create new user"
        android:onClick="loginNewUser" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New User? Enter your credentials to save data!"
        android:layout_centerHorizontal="true"
        android:textColor="#FFFFFF"
        android:paddingBottom="20dp"
        android:layout_above="@id/first_name_et"/>

</RelativeLayout>